Add selection buttons

--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html>
 
 <head>
-    <title>JavaScript Fundamentals part 1</title>
+    <title>Rock Paper Scissors</title>
     <meta charset="UTF-8" />
 </head>
 
 <body>
+    <div class="selections">
+        <button value="Rock" class="selection">Rock</button>
+        <button value="Paper" class="selection">Paper</button>
+        <button value="Scissors" class="selection">Scissors</button>
+    </div>
+
     <script src="rps.js"></script>
 </body>
 
