Add running score display, computer selection display, final result display, play again button

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta charset="UTF-8" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="stylesheets/reset.css">
     <link rel="stylesheet" href="stylesheets/main.css">
@@ -16,14 +17,14 @@
     <div class="page flex">
         <div class="result-container flex">
             <div class="result flex">
-                Player: 
+                Player:
                 <div id="player-score" class="score">
                     0
                 </div>
             </div>
 
             <div class="result flex">
-                Computer: 
+                Computer:
                 <div id="computer-score" class="score">
                     0
                 </div>
@@ -48,7 +49,8 @@
                                 d="M86.85,176.12c-.44-3.87-4.72-7.31-6.26-12.47C86,167.32,87.32,176.74,95,177,91.4,178,90.47,175.13,86.85,176.12Z" />
                             <path class="cls-1"
                                 d="M51.55,69.64c5.29,1.19,14.11,2.45,14.86,6.92C62.43,72.85,55.75,73.05,51.55,69.64Z" />
-                            <path class="cls-1" d="M28.9,24.12c-.47-2.4,1-6.91,3-5.35C30.35,20.16,30.81,23,28.9,24.12Z" />
+                            <path class="cls-1"
+                                d="M28.9,24.12c-.47-2.4,1-6.91,3-5.35C30.35,20.16,30.81,23,28.9,24.12Z" />
                             <path class="cls-1"
                                 d="M14.16,53.21c1.79-.61,3.77-4.55,5.91-2.68C18.28,51.14,16.29,55.08,14.16,53.21Z" />
                             <path class="cls-1"
@@ -79,15 +81,18 @@
                             <path
                                 d="M45.36,31.33c1.32-.06.94,1.67.52,2.44.92-2.44,5.95-2.2,7.63-4.15C52.07,28.89,46.16,29.49,45.36,31.33Z" />
                             <path d="M53.82,79.7c2.93-1.36,6.86-2.07,8.44-4.32C58.57,76.25,54.68,77,53.82,79.7Z" />
-                            <path d="M70.45,146.76c1.52,4.49,1.06,12,4.53,13.5C73.12,154.09,74.78,149.15,70.45,146.76Z" />
+                            <path
+                                d="M70.45,146.76c1.52,4.49,1.06,12,4.53,13.5C73.12,154.09,74.78,149.15,70.45,146.76Z" />
                             <path
                                 d="M24.91,59.42c1.25,1,3.13,1,5.23.6.49-1.55,2.36-2.2,2.57-3.94-2.31,1.31-8.62,0-7.8,3.34Z" />
                             <path d="M31.88,88.56c2.41-.77,6.52-.42,6.17-3C36.15,86.67,30.71,85.45,31.88,88.56Z" />
                             <path
                                 d="M43.92,154A34.66,34.66,0,0,0,45.16,164c2.31-1.33,3.11-7.3.56-9.47C46.47,159.62,45.29,154.54,43.92,154Z" />
                             <path d="M14.7,152.52c3.59-.71,6.66-1.75,8.62-3.51C20.78,150.4,14.08,149.07,14.7,152.52Z" />
-                            <path d="M100.13,162.63c-1.32-3.66,1.8-7.37-2-9.77C99.86,156.41,97.1,160.61,100.13,162.63Z" />
-                            <path d="M132.39,232.42c-1.3-5.3-1.2-9.69-1.28-14.19C128.8,220.4,131,232.45,132.39,232.42Z" />
+                            <path
+                                d="M100.13,162.63c-1.32-3.66,1.8-7.37-2-9.77C99.86,156.41,97.1,160.61,100.13,162.63Z" />
+                            <path
+                                d="M132.39,232.42c-1.3-5.3-1.2-9.69-1.28-14.19C128.8,220.4,131,232.45,132.39,232.42Z" />
                             <path d="M31.28,93.79c1.45-1.2,8.69-2.23,7-3.17C35.45,90.93,29.87,93.05,31.28,93.79Z" />
                             <path d="M29.13,91.69c4-1.35,6.52-1.62,8.79-2.7C35.72,88.07,29.58,89.27,29.13,91.69Z" />
                             <path
@@ -109,8 +114,10 @@
                         <g id="Layer_1-2" data-name="Layer 1">
                             <path class="cls-1"
                                 d="M75.52,32c-1.21,2-5.48.33-4.8,3.11,1-.79.8.78-.45,1.7C73.34,38.2,76.09,34.84,79,34,77.78,32.47,76.77,33.92,75.52,32Z" />
-                            <path class="cls-1" d="M79.89,64c2.5,1.1,7.74-.45,8.2-2.22C85.39,62.9,82.5,61.31,79.89,64Z" />
-                            <path class="cls-1" d="M17.64,49.2c1.83-.79,6.45-3,6.29-6C22.17,45.16,17.47,46,17.64,49.2Z" />
+                            <path class="cls-1"
+                                d="M79.89,64c2.5,1.1,7.74-.45,8.2-2.22C85.39,62.9,82.5,61.31,79.89,64Z" />
+                            <path class="cls-1"
+                                d="M17.64,49.2c1.83-.79,6.45-3,6.29-6C22.17,45.16,17.47,46,17.64,49.2Z" />
                             <path class="cls-1"
                                 d="M42.19,83.2c2.27-2.39,7.47-4.52,7.91-6.65C47.7,77,42.54,79.69,42.19,83.2Z" />
                             <path class="cls-1"
@@ -131,10 +138,9 @@
             </button>
         </div>
 
-        <div class="computer-selection-container">
-            <div class="computer-selection">
-
-            </div>
+        <div class="computer-selection-container flex">
+            Last Computer Selection:&nbsp;
+            <div class="computer-selection"></div>
         </div>
     </div>
 
